# SmartCar-Competition

./: Instructions.doc  README.md
src/odom_tf_converter/: CMakeLists.txt  README.md  package.xml
src/odom_tf_converter/src/: odom_to_tf.cpp  pub_pose.cpp  tf_to_odom.cpp
src/racecar/: CMakeLists.txt  package.xml
src/racecar/racecar_control/: package.xml
src/racecar/racecar_control/config/: racecar_control.yaml
src/racecar/racecar_control/launch/: racecar_control.launch
src/racecar/racecar_description/rviz/: racecar_urdf.rviz
src/racecar/racecar_gazebo/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  racecar_rviz.rviz  teb_local_planner_params.yaml
src/racecar/racecar_gazebo/launch/: amcl.launch  odom_conbine.launch  racecar.launch  racecar_runway_navigation.launch  racecar_rviz.launch  racecar_rviz_navigation.launch  run_all.launch  test_world.launch
src/racecar/racecar_gazebo/map/: racecar_map.pgm  racecar_map.yaml
src/racecar/racecar_gazebo/scripts/: gazebo_odometry.py  odom_ekf.py  path_pursuit.py
src/racecar/racecar_gazebo/worlds/: README.md  test.world  (+8 more)
src/racecar/scripts/: control_plugin.py
src/racecar_description/launch/: racecar.launch  racecar_rviz.launch
src/racecar_description/urdf/: racecar.urdf.xacro
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
src/robot_pose_ekf-master/src/: odom_estimation.cpp  odom_estimation_node.cpp
(+4 files in other folders)
